# CEFWebSearchMCP

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TASK.md
.github/workflows/: ci.yml
ci/: cef-version.env
cmake/: CEFConfig.cmake
doc/: architecture.md  cef-runtime-notes.md  clangd-setup.md  crawler-server-gap-analysis.md  mcp-api.md  overview.md  requirements.md  risk-register.md  roadmap.md
include/cefwebsearchmcp/cef/: session_manager.hpp
include/cefwebsearchmcp/config/: runtime_config.hpp
include/cefwebsearchmcp/core/: application.hpp
include/cefwebsearchmcp/search/: search_orchestrator.hpp
scripts/: build.sh  clangd-cxx-driver.sh  fetch-cef.sh
src/: CMakeLists.txt  main.cpp
src/cef/: session_manager.cpp
src/core/: application.cpp
src/search/: search_orchestrator.cpp
tests/: CMakeLists.txt
tests/unit/: smoke_test.cpp
